# pycoingecko-rs

./: .gitignore  README.md
.github/workflows/: codequality.yml  rust.yml  testing.yml
pycoingecko-rs/: .env  Cargo.toml
pycoingecko-rs/examples/: fetch_market_data.rs
pycoingecko-rs/src/: client.rs  error.rs  lib.rs  models.rs
pycoingecko-rs/src/endpoints/: coins.rs  exchanges.rs  market.rs  mod.rs  ping.rs
pycoingecko-rs/tests/: mod.rs  test_coins.rs
