[package]
name = "pycoingecko-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
mockall = "0.13.1"
mockito = "0.31"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] } 
